@@ -1,50 +1,284 @@
-# Ansible Role for Confluence
+# [confluence](#confluence)
 
-<img src="/alvistack.svg" width="75" alt="AlviStack">
+Ansible Role for Atlassian Confluence Installation
 
-[![Gitlab pipeline status](https://img.shields.io/gitlab/pipeline/alvistack/ansible-role-confluence/master)](https://gitlab.com/alvistack/ansible-role-confluence/-/pipelines)
-[![GitHub tag](https://img.shields.io/github/tag/alvistack/ansible-role-confluence.svg)](https://github.com/alvistack/ansible-role-confluence/tags)
-[![GitHub license](https://img.shields.io/github/license/alvistack/ansible-role-confluence.svg)](https://github.com/alvistack/ansible-role-confluence/blob/master/LICENSE)
-[![Ansible Role](https://img.shields.io/badge/galaxy-alvistack.confluence-blue.svg)](https://galaxy.ansible.com/alvistack/confluence)
+|GitHub|GitLab|Quality|Downloads|Version|Issues|Pull Requests|
+|------|------|-------|---------|-------|------|-------------|
+|[![github](https://github.com/buluma/ansible-role-confluence/workflows/Ansible%20Molecule/badge.svg)](https://github.com/buluma/ansible-role-confluence/actions)|[![gitlab](https://gitlab.com/buluma/ansible-role-confluence/badges/master/pipeline.svg)](https://gitlab.com/buluma/ansible-role-confluence)|[![quality](https://img.shields.io/ansible/quality/)](https://galaxy.ansible.com/buluma/confluence)|[![downloads](https://img.shields.io/ansible/role/d/)](https://galaxy.ansible.com/buluma/confluence)|[![Version](https://img.shields.io/github/release/buluma/ansible-role-confluence.svg)](https://github.com/buluma/ansible-role-confluence/releases/)|[![Issues](https://img.shields.io/github/issues/buluma/ansible-role-confluence.svg)](https://github.com/buluma/ansible-role-confluence/issues/)|[![PullRequests](https://img.shields.io/github/issues-pr-closed-raw/buluma/ansible-role-confluence.svg)](https://github.com/buluma/ansible-role-confluence/pulls/)|
 
-Ansible Role for Atlassian Confluence Installation.
+## [Example Playbook](#example-playbook)
 
-## Requirements
+This example is taken from `molecule/default/converge.yml` and is tested on each push, pull request and release.
+```yaml
+---
+- hosts: all
+  remote_user: root
+  become: true
+  tasks:
+    - name: include role
+      ansible.builtin.include_role:
+        name: openjdk
+      tags: openjdk
 
-This role require Ansible community package 4.10 or higher.
+    - name: include role
+      ansible.builtin.include_role:
+        name: confluence
+      tags: confluence
+```
 
-This role was designed for:
+The machine needs to be prepared. In CI this is done using `molecule/default/prepare.yml`:
+```yaml
+---
+- hosts: all
+  remote_user: root
+  become: true
+  gather_facts: false
+  tasks:
+    - name: redhat | subscription-manager register
+      ansible.builtin.raw: |
+        set -eu
+        subscription-manager register \
+          --username={{ lookup('env', 'REDHAT_USERNAME') }} \
+          --password={{ lookup('env', 'REDHAT_PASSWORD') }} \
+          --auto-attach
+      changed_when: false
+      failed_when: false
 
-  - Ubuntu 18.04, 20.04, 21.10, 22.04
-  - CentOS 7, 8 Stream, 9 Stream
-  - openSUSE Leap 15.3, Leap 15.4, Tumbleweed
-  - Debian 10, 11, Testing
-  - Fedora 34, 35, 36, Rawhide
-  - RHEL 7, 8, 9
+    - name: debian | apt-get install python3
+      ansible.builtin.raw: |
+        set -eu
+        apt-get update
+        DEBIAN_FRONTEND=noninteractive apt-get install -y python3
+      changed_when: false
+      failed_when: false
 
-## Role Variables
+    - name: redhat | yum install python3
+      ansible.builtin.raw: |
+        set -eu
+        yum makecache
+        yum install -y python3
+      changed_when: false
+      failed_when: false
 
-[defaults/main.yml](defaults/main.yml)
+    - name: suse | zypper install python3
+      ansible.builtin.raw: |
+        set -eu
+        zypper -n --gpg-auto-import-keys refresh
+        zypper -n install -y python3
+      changed_when: false
+      failed_when: false
 
-## Dependencies
+- hosts: all
+  remote_user: root
+  become: true
+  tasks:
+    - name: cp -rfT /etc/skel /root
+      ansible.builtin.raw: |
+        set -eu
+        cp -rfT /etc/skel /root
+      changed_when: false
+      failed_when: false
 
-[ansible-galaxy-requirements.yml](ansible-galaxy-requirements.yml)
+    - name: setenforce 0
+      ansible.builtin.raw: |
+        set -eu
+        setenforce 0
+        sed -i 's/^SELINUX=.*$/SELINUX=permissive/g' /etc/selinux/config
+      changed_when: false
+      failed_when: false
 
-## Example Playbook
+    - name: systemctl stop firewalld.service
+      ansible.builtin.raw: |
+        set -eu
+        systemctl stop firewalld.service
+        systemctl disable firewalld.service
+      changed_when: false
+      failed_when: false
 
-[molecule/default/converge.yml](molecule/default/converge.yml)
+    - name: systemctl stop ufw.service
+      ansible.builtin.raw: |
+        set -eu
+        systemctl stop ufw.service
+        systemctl disable ufw.service
+      changed_when: false
+      failed_when: false
 
-This role could simply deploy to `localhost` as below:
+    - name: debian | apt-get install *.deb
+      ansible.builtin.raw: |
+        set -eu
+        DEBIAN_FRONTEND=noninteractive apt-get install -y bzip2 ca-certificates curl gcc gnupg gzip hostname iproute2 passwd procps python3 python3-apt python3-jmespath python3-lxml python3-pip python3-setuptools python3-venv python3-virtualenv python3-wheel rsync sudo tar unzip util-linux xz-utils zip
+      when: ansible_os_family | lower == "debian"
+      changed_when: false
+      failed_when: false
 
-    molecule converge -s default
+    - name: fedora | yum install *.rpm
+      ansible.builtin.raw: |
+        set -eu
+        yum install -y bzip2 ca-certificates curl gcc gnupg2 gzip hostname iproute procps-ng python3 python3-dnf-plugin-versionlock python3-jmespath python3-libselinux python3-lxml python3-pip python3-setuptools python3-virtualenv python3-wheel rsync shadow-utils sudo tar unzip util-linux xz yum-utils zip
+      when: ansible_distribution | lower == "fedora"
+      changed_when: false
+      failed_when: false
 
-## License
+    - name: redhat-9 | yum install *.rpm
+      ansible.builtin.raw: |
+        set -eu
+        yum-config-manager --enable crb || echo $?
+        yum-config-manager --enable codeready-builder-beta-for-rhel-9-x86_64-rpms || echo $?
+        yum install -y http://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm
+        yum install -y bzip2 ca-certificates curl gcc gnupg2 gzip hostname iproute procps-ng python3 python3-dnf-plugin-versionlock python3-jmespath python3-libselinux python3-lxml python3-pip python3-setuptools python3-virtualenv python3-wheel rsync shadow-utils sudo tar unzip util-linux xz yum-utils zip
+      when: ansible_os_family | lower == "redhat" and ansible_distribution_major_version | lower == "9"
+      changed_when: false
+      failed_when: false
 
-  - Code released under [Apache License 2.0](LICENSE)
-  - Docs released under [CC BY 4.0](http://creativecommons.org/licenses/by/4.0/)
+    - name: redhat-8 | yum install *.rpm
+      ansible.builtin.raw: |
+        set -eu
+        yum install -y http://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
+        yum install -y bzip2 ca-certificates curl gcc gnupg2 gzip hostname iproute procps-ng python3 python3-dnf-plugin-versionlock python3-jmespath python3-libselinux python3-lxml python3-pip python3-setuptools python3-virtualenv python3-wheel rsync shadow-utils sudo tar unzip util-linux xz yum-utils zip
+      when: ansible_os_family | lower == "redhat" and ansible_distribution_major_version | lower == "8"
+      changed_when: false
+      failed_when: false
 
-## Author Information
+    - name: redhat-7 | yum install *.rpm
+      ansible.builtin.raw: |
+        set -eu
+        subscription-manager repos --enable=rhel-7-server-optional-rpms || echo $?
+        yum install -y http://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
+        yum install -y bzip2 ca-certificates curl gcc gnupg2 gzip hostname iproute procps-ng python3 python3-jmespath python3-libselinux python3-lxml python3-pip python3-setuptools python3-virtualenv python3-wheel rsync shadow-utils sudo tar unzip util-linux xz yum-plugin-versionlock yum-utils zip
+      when: ansible_os_family | lower == "redhat" and ansible_distribution_major_version | lower == "7"
+      changed_when: false
+      failed_when: false
 
-  - Wong Hoi Sing Edison
-      - <https://twitter.com/hswong3i>
-      - <https://github.com/hswong3i>
+    - name: suse | zypper -n install *.rpm
+      ansible.builtin.raw: |
+        set -eu
+        zypper -n install -y bzip2 ca-certificates curl gcc gpg2 gzip hostname iproute2 procps python3 python3-jmespath python3-lxml python3-pip python3-setuptools python3-virtualenv python3-wheel rsync shadow sudo tar unzip util-linux xz zip
+      when: ansible_os_family | lower == "suse"
+      changed_when: false
+      failed_when: false
+```
+
+
+## [Role Variables](#role-variables)
+
+The default values for the variables are set in `defaults/main.yml`:
+```yaml
+---
+
+# (c) Wong Hoi Sing Edison <hswong3i@pantarei-design.com>
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+# PostgreSQL JDBC release.
+postgresql_jdbc_release: "42.3"
+
+# PostgreSQL JDBC version.
+postgresql_jdbc_version: "{{ _postgresql_jdbc_version[postgresql_jdbc_release] }}"
+
+# PostgreSQL JDBC download details.
+postgresql_jdbc_download: "{{ _postgresql_jdbc_download[postgresql_jdbc_version] }}"
+
+# Confluence release.
+confluence_release: "7.17"
+
+# Confluence version.
+confluence_version: "{{ _confluence_version[confluence_release] }}"
+
+# Confluence download details.
+confluence_download: "{{ _confluence_download[confluence_version] }}"
+
+# Owner and group for Confluence.
+confluence_owner: "confluence"
+confluence_group: "confluence"
+
+# Confluence home directory.
+confluence_home: "/var/atlassian/application-data/confluence"
+
+# Confluence installation directory.
+confluence_catalina: "/opt/atlassian/confluence"
+
+# JVM minimal and maximum memory usage.
+confluence_jvm_minimum_memory: "2048m"
+confluence_jvm_maximum_memory: "2048m"
+
+# Proxy and context path setup.
+confluence_catalina_connector_proxyname: ~
+confluence_catalina_connector_proxyport: ~
+confluence_catalina_connector_scheme: "http"
+confluence_catalina_connector_secure: "false"
+confluence_catalina_context_path: ~
+
+# Atlassian Support recommended JVM arguments.
+confluence_jvm_support_recommended_args: >-
+  -Datlassian.plugins.enable.wait=300
+  -XX:+UnlockExperimentalVMOptions
+  -XX:+UseCGroupMemoryLimitForHeap
+  -XX:MaxRAMFraction=1
+
+# Session timeout (in minutes).
+confluence_session_timeout: "120"
+```
+
+## [Requirements](#requirements)
+
+- pip packages listed in [requirements.txt](https://github.com/buluma/ansible-role-confluence/blob/main/requirements.txt).
+
+## [Status of used roles](#status-of-requirements)
+
+The following roles are used to prepare a system. You can prepare your system in another way.
+
+| Requirement | GitHub | GitLab |
+|-------------|--------|--------|
+|[openjdk](https://galaxy.ansible.com/buluma/openjdk)|[![Build Status GitHub](https://github.com/buluma/openjdk/workflows/Ansible%20Molecule/badge.svg)](https://github.com/buluma/openjdk/actions)|[![Build Status GitLab ](https://gitlab.com/buluma/openjdk/badges/master/pipeline.svg)](https://gitlab.com/buluma/openjdk)|
+
+## [Context](#context)
+
+This role is a part of many compatible roles. Have a look at [the documentation of these roles](https://buluma.co.ke/) for further information.
+
+Here is an overview of related roles:
+
+![dependencies](https://raw.githubusercontent.com/buluma/ansible-role-confluence/png/requirements.png "Dependencies")
+
+## [Compatibility](#compatibility)
+
+This role has been tested on these [container images](https://hub.docker.com/u/buluma):
+
+|container|tags|
+|---------|----|
+|ubuntu|all|
+|el|all|
+|opensuse|all|
+|debian|all|
+|fedora|all|
+
+The minimum version of Ansible required is 4.10, tests have been done to:
+
+- The previous version.
+- The current version.
+- The development version.
+
+
+
+If you find issues, please register them in [GitHub](https://github.com/buluma/ansible-role-confluence/issues)
+
+## [Changelog](#changelog)
+
+[Role History](https://github.com/buluma/ansible-role-confluence/blob/master/CHANGELOG.md)
+
+## [License](#license)
+
+Apache-2.0
+
+## [Author Information](#author-information)
+
+[Michael Buluma](https://buluma.github.io/)
